# turbomcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DPOP_ARCHITECTURE.md  MIGRATION.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  RELEASE_CHECKLIST_v1.1.0.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.1.0-exp.X.md  RELEASE_NOTES_1.1.0-rc.1.md  SECURITY_POLICY.md  arc_mutex_audit_report.json  audit_arc_mutex.py  audit_traits.py  bench_before_lineparse.txt  bench_before_metrics.txt  bench_before_sse.txt  comprehensive_audit.py  comprehensive_audit_report.json  comprehensive_mcp_compliance_audit.json  deny.toml  docker-compose.yml  justfile  mkdocs.yml  schema_compliance_test.rs  schema_validation_tests.json  test_minimal_working.rs  test_schema_validation.rs  test_websocket_macro.rs  trait_audit_report.json
crates/turbomcp/: CONTRIBUTING.md  Cargo.toml  README.md
crates/turbomcp-auth/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-auth/examples/: oauth2_auth_code_flow.rs  protected_resource_server.rs  tower_rate_limiting.rs
crates/turbomcp-auth/src/: api_key_validation.rs  audit.rs  auth_metrics.rs  config.rs  context.rs  incremental_consent.rs  introspection.rs  lib.rs  manager.rs  rate_limit.rs  server.rs  ssrf.rs  types.rs
crates/turbomcp-auth/tests/: dpop_integration.rs  jwks_caching_robustness.rs  jwt_validation_edge_cases.rs  multi_provider_scenarios.rs  oauth2_flow_integration.rs  security_attack_scenarios.rs  token_lifecycle.rs
crates/turbomcp-cli/: ARCHITECTURE.md  Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-cli/src/: build.rs  cli.rs  cli_new.rs  commands.rs  deploy.rs  dev.rs  error.rs  executor.rs  formatter.rs  install.rs  lib.rs  lib_new.rs  main.rs  new.rs  output.rs  path_security.rs  prelude.rs  transport.rs
crates/turbomcp-cli/tests/: path_security_tests.rs
crates/turbomcp-cli/tests_legacy/: functional_cli_tests.rs  main_integration_tests.rs  main_tests.rs
crates/turbomcp-client/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-client/examples/: elicitation_interactive_client.rs  production_llm_sampling.rs  sampling_client.rs
crates/turbomcp-client/src/: handlers.rs  integration.rs  lib.rs  prelude.rs  sampling.rs  sampling_old_antipattern.rs
crates/turbomcp-client/tests/: bidirectional_test.rs  completion_tests.rs  concurrency_config_test.rs  handler_registration_tests.rs  llm_backend_tests.rs  mcp_compliance_verification.rs  missing_protocol_methods_tests.rs  plugin_system_tests.rs  prompt_api_tests.rs  prompt_protocol_compliance_test.rs  shared_client_tests.rs
crates/turbomcp-compat/: Cargo.toml  README.md
crates/turbomcp-compat/src/: lib.rs
crates/turbomcp-core/: Cargo.toml  README.md  test_msgpacker.rs
crates/turbomcp-core/benches/: rkyv_zero_copy_benchmark.rs  zero_copy_bench.rs
crates/turbomcp-core/src/: auth.rs  context.rs  enhanced_registry.rs  error.rs  handler.rs  handlers.rs  jsonrpc.rs  lib.rs  lock_free.rs  marker.rs  message.rs  registry.rs  response.rs  rkyv_types.rs  router.rs  security.rs  session.rs  shared.rs  zero_copy.rs
crates/turbomcp-core/tests/: comprehensive_context_tests.rs  comprehensive_error_tests.rs  comprehensive_message_advanced_tests.rs  comprehensive_message_tests.rs  enhanced_context_tests.rs  enhanced_session_tests.rs  integration.rs  msgpacker_test.rs
crates/turbomcp-dpop/: Cargo.toml  MIGRATION.md  README.md  docker-compose.test.yml
crates/turbomcp-dpop/scripts/: test-docker.sh
crates/turbomcp-dpop/src/: errors.rs  helpers.rs  hsm.rs  keys.rs  lib.rs  proof.rs  redis_storage.rs  test_utils.rs  types.rs
crates/turbomcp-dpop/tests/: redis_integration.rs
crates/turbomcp-grpc/: Cargo.toml  README.md  build.rs
crates/turbomcp-grpc/src/: client.rs  convert.rs  error.rs  layer.rs  lib.rs  server.rs
crates/turbomcp-http/: Cargo.toml  README.md
crates/turbomcp-http/benches/: metrics_recording.rs
crates/turbomcp-http/src/: lib.rs  transport.rs
crates/turbomcp-macros/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-macros/src/: attrs.rs  bidirectional_wrapper.rs  compile_time_router.rs  completion.rs  context_aware_dispatch.rs  elicitation.rs  helpers.rs  lib.rs  ping.rs  prompt.rs  resource.rs  schema.rs  server.rs  template.rs  tool.rs  tool_router.rs  tower_service.rs  uri_template.rs
crates/turbomcp-macros/tests/: documentation_examples.rs  error_integration_tests.rs  helper_macro_tests.rs  stdio_safety_tests.rs
crates/turbomcp-protocol/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-protocol/fuzz/: Cargo.toml  README.md
crates/turbomcp-protocol/src/: capabilities.rs  codec.rs  config.rs  elicitation.rs  enhanced_registry.rs  error.rs  handlers.rs  jsonrpc.rs  lib.rs  lock_free.rs  message.rs  registry.rs  rkyv_bridge.rs  session.rs  shared.rs  test_helpers.rs  types.rs  validation.rs  versioning.rs  zero_copy.rs
crates/turbomcp-protocol/tests/: comprehensive_capabilities_tests.rs  comprehensive_jsonrpc_tests.rs  comprehensive_validation_tests.rs  comprehensive_versioning_tests.rs  concurrency_tests.rs  documentation_examples.rs  mcp_basic_protocol_compliance.rs  mcp_compliance_comprehensive_tests.rs  mcp_compliance_validation_tests.rs  types_tests.rs  version_adapter_tests.rs
crates/turbomcp-proxy/: Cargo.toml  README.md
crates/turbomcp-proxy/src/: config.rs  (+3 more)
crates/turbomcp-security/: Cargo.toml  README.md  debug_test.rs
crates/turbomcp-server/: Cargo.toml  MIGRATION.md  README.md  TEST_CONSOLIDATION.md
crates/turbomcp-tcp/: Cargo.toml  README.md
crates/turbomcp-telemetry/: Cargo.toml  README.md
crates/turbomcp-transport/: Cargo.toml  MIGRATION.md  README.md  SECURITY_FEATURES.md
crates/turbomcp-transport-streamable/: Cargo.toml  README.md
crates/turbomcp-types/: Cargo.toml  README.md
crates/turbomcp-wasm/: Cargo.toml  README.md
crates/turbomcp-wasm-macros/: Cargo.toml  README.md
crates/turbomcp-websocket/: Cargo.toml  README.md
crates/turbomcp-wire/: Cargo.toml  README.md
demo/: COMPILATION_STATUS.md  Cargo.toml  MCP_SETUP.md  README.md  plugin_execution_patterns.rs
demo/src/: main.rs
(+916 files in other folders)
