[package]
name = "turbomcp-demo"
version = "3.0.0-exp.1"
edition = "2021"
license = "MIT"
description = "Demo project showcasing TurboMCP in action"
publish = false

[dependencies]
# Using the TurboMCP SDK for zero boilerplate
turbomcp = { path = "../crates/turbomcp" }

# Internal dependencies needed by the macro
turbomcp-protocol = { path = "../crates/turbomcp-protocol" }
turbomcp-transport = { path = "../crates/turbomcp-transport" }
turbomcp-server = { path = "../crates/turbomcp-server" }

# Basic dependencies for a real project
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"
axum = { version = "0.8.4", features = ["ws"] }