[package]
name = "turbomcp-demo"
version = "3.0.0-exp.2"
edition = "2024"
license = "MIT"
description = "Demo project showcasing TurboMCP v3 architecture"
publish = false

[dependencies]
# TurboMCP SDK with v3 macros
turbomcp = { path = "../crates/turbomcp" }

# Dependencies required by macro-generated code
# TODO: These should be re-exported through turbomcp in a future version
turbomcp-core = { path = "../crates/turbomcp-core" }
turbomcp-types = { path = "../crates/turbomcp-types" }
schemars = "1.0"
serde_json = "1.0"

# Async runtime
tokio = { workspace = true }

# Date/time for demo
chrono = { version = "0.4", features = ["serde"] }
