[package]
name = "turbomcp-demo"
version = "3.0.0-beta.4"
edition = "2024"
license = "MIT"
description = "Demo project showcasing TurboMCP v3 architecture"
publish = false

[dependencies]
# TurboMCP SDK with v3 macros
turbomcp = { path = "../crates/turbomcp" }

# Async runtime
tokio = { workspace = true }

# Date/time for demo
chrono = { version = "0.4", features = ["serde"] }
