[package]
name = "turbomcp-auth"
version = "2.0.0-rc.2"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "OAuth 2.1 and authentication for TurboMCP with MCP protocol compliance"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-auth"
readme = "README.md"
keywords = ["oauth", "authentication", "mcp", "security", "api-key"]
categories = ["authentication", "web-programming", "network-programming"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0.16"
tracing = "0.1"

# OAuth 2.1 dependencies - battle-tested library
oauth2 = "4.4.2"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
url = "2.5"

# HTTP types
http = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for session/token management
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Secret management
secrecy = "0.8.0"

# HTTP client for OAuth flows
reqwest = { version = "0.12", features = ["json"] }

# Utilities
once_cell = "1.19"

# Internal dependencies
turbomcp-protocol = { version = "2.0.0-rc.2", path = "../turbomcp-protocol" }

# Optional: DPoP support
turbomcp-dpop = { version = "2.0.0-rc.2", path = "../turbomcp-dpop", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = []

# DPoP support (RFC 9449)
dpop = ["dep:turbomcp-dpop"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
