[package]
name = "turbomcp-auth"
version = "2.1.3"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "OAuth 2.1 and authentication for TurboMCP with MCP protocol compliance"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-auth"
readme = "README.md"
keywords = ["oauth", "authentication", "mcp", "security", "api-key"]
categories = ["authentication", "web-programming", "network-programming"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0.16"
tracing = "0.1"

# OAuth 2.1 dependencies
# NOTE: oauth2 4.4 depends on reqwest 0.11, workspace uses 0.12
# This creates duplicate compilation of HTTP libraries (~50GB of the 125GB target bloat)
# Migration to oauth2 5.0 would fix this but requires major API refactoring (typestate system)
# See: https://github.com/ramosbugs/oauth2-rs/blob/main/UPGRADE.md
# TODO v3.0.0: Migrate to oauth2 5.0 for reqwest 0.12 native support
oauth2 = "4.4.2"
jsonwebtoken = "9.3"              # JWT validation and signing (industry standard)
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
url = "2.5"

# HTTP types
http = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for session/token management
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Secret management
secrecy = { version = "0.8.0", features = ["serde"] }

# Cryptography (Sprint 2: API key constant-time comparison)
subtle = "2.6"          # Constant-time comparison for timing attack resistance
blake3 = "1.5"          # Fast cryptographic hashing for API keys

# HTTP client for OAuth flows
reqwest = { version = "0.12", features = ["json"] }

# Utilities
once_cell = "1.19"

# Internal dependencies
turbomcp-protocol = { version = "2.1.3", path = "../turbomcp-protocol" }

# Optional: DPoP support
turbomcp-dpop = { version = "2.1.3", path = "../turbomcp-dpop", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"
proptest = "1.5"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"

[features]
# Default features - minimal but useful
default = ["api-key", "oauth2"]

# Core authentication methods
api-key = []                                    # API key authentication
jwt = []                                        # JWT validation (uses jsonwebtoken via oauth2 for now)
oauth2 = []                                     # OAuth 2.1 flows (currently always enabled via hard deps)
custom = []                                     # Custom auth provider support (just traits)

# Advanced features
dpop = ["dep:turbomcp-dpop"]                    # RFC 9449 DPoP token binding
rbac = []                                       # Role-based access control helpers

# Token lifecycle
token-refresh = []                              # Automatic token refresh
token-revocation = []                           # Token revocation support

# Observability
metrics = []                                    # Metrics collection (future: dep:metrics)
tracing-ext = []                                # Extended tracing (already have tracing as hard dep)

# Middleware
middleware = []                                 # Tower middleware support (future: dep:tower)

# Batteries-included
full = [
    "api-key", "jwt", "oauth2", "custom",
    "dpop", "rbac",
    "token-refresh", "token-revocation",
    "metrics", "tracing-ext", "middleware"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
