[package]
name = "turbomcp-auth"

version = "2.3.7"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "OAuth 2.1 and authentication for TurboMCP with MCP protocol compliance"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-auth"
readme = "README.md"
keywords = ["oauth", "authentication", "mcp", "security", "api-key"]
categories = ["authentication", "web-programming", "network-programming"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0.16"
tracing = "0.1"

# OAuth 2.1 dependencies
# oauth2 5.0 uses reqwest 0.12 (matches workspace), eliminating duplicate HTTP dependencies
# Typestate system ensures endpoint configuration at compile time
# See: https://github.com/ramosbugs/oauth2-rs/blob/main/UPGRADE.md
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
jsonwebtoken = { workspace = true }  # JWT validation and signing (industry standard)
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
url = "2.5"

# HTTP types
http = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for session/token management
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }

# Secret management
secrecy = { version = "0.8.0", features = ["serde"] }

# Cryptography (Sprint 2: API key constant-time comparison)
subtle = "2.6"          # Constant-time comparison for timing attack resistance
blake3 = "1.5"          # Fast cryptographic hashing for API keys

# HTTP client for OAuth flows
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
once_cell = "1.19"

# MCP 2025-11-25 Draft: CIMD support
dashmap = { version = "6.1.0", optional = true }  # Concurrent HashMap for caching

# Internal dependencies

turbomcp-protocol = { version = "2.3.7", path = "../turbomcp-protocol" }

# Optional: DPoP support
turbomcp-dpop = { version = "2.3.7", path = "../turbomcp-dpop", optional = true }

# Optional: DPoP support

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"
proptest = "1.5"
rand = "0.8"

[features]
# Default features - minimal but useful
default = ["api-key", "oauth2"]

# Core authentication methods
api-key = []                                    # API key authentication
jwt = []                                        # JWT validation (uses jsonwebtoken via oauth2 for now)
oauth2 = []                                     # OAuth 2.1 flows (currently always enabled via hard deps)
custom = []                                     # Custom auth provider support (just traits)

# Advanced features
dpop = ["dep:turbomcp-dpop"]                    # RFC 9449 DPoP token binding
rbac = []                                       # Role-based access control helpers

# Token lifecycle
token-refresh = []                              # Automatic token refresh
token-revocation = []                           # Token revocation support

# Observability
metrics = []                                    # Metrics collection (future: dep:metrics)
tracing-ext = []                                # Extended tracing (already have tracing as hard dep)

# Middleware
middleware = []                                 # Tower middleware support (future: dep:tower)

# MCP 2025-11-25 Draft Specification Features (Authorization)
mcp-ssrf = []                               # SSRF protection for HTTP fetching (used by CIMD and Discovery)
mcp-cimd = ["mcp-ssrf", "dep:dashmap"]      # Client ID Metadata Documents (SEP-991)
mcp-oidc-discovery = ["mcp-ssrf", "dep:dashmap"]  # OpenID Connect Discovery 1.0 support (RFC 8414 + OIDC)
mcp-incremental-consent = []                # Incremental scope consent via WWW-Authenticate (SEP-835)

# Batteries-included
full = [
    "api-key", "jwt", "oauth2", "custom",
    "dpop", "rbac",
    "token-refresh", "token-revocation",
    "metrics", "tracing-ext", "middleware",
    "mcp-cimd", "mcp-oidc-discovery", "mcp-incremental-consent"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
