[package]
name = "turbomcp-client"
version = "1.0.5"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "MCP client implementation with connection management and error recovery"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "client", "connection", "recovery", "async"]
categories = ["development-tools", "network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
turbomcp-core = { version = "1.0.5", path = "../turbomcp-core" }
turbomcp-protocol = { version = "1.0.5", path = "../turbomcp-protocol" }
turbomcp-transport = { version = "1.0.5", path = "../turbomcp-transport" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# LLM backend integration
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Plugin system dependencies
chrono = { workspace = true, features = ["serde"] }
# LLM integration dependencies
futures = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }