[package]
name = "turbomcp-client"
version = "2.1.3"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "MCP client with full protocol support, bidirectional communication, and plugin middleware"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "client", "connection", "recovery", "async"]
categories = ["development-tools", "network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
turbomcp-protocol = { workspace = true }
turbomcp-transport = { workspace = true, default-features = false }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# LLM backend integration
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Plugin system dependencies
chrono = { workspace = true, features = ["serde"] }
# LLM integration dependencies
futures = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["stdio"]

# Transport features (pass-through to turbomcp-transport)
stdio = ["turbomcp-transport/stdio"]
http = ["turbomcp-transport/http"]
websocket = ["turbomcp-transport/websocket"]
tcp = ["turbomcp-transport/tcp"]
unix = ["turbomcp-transport/unix"]