[package]
name = "turbomcp-compat"
version = "3.0.0-alpha.1"
edition = "2024"
rust-version = "1.89.0"
description = "Backward compatibility layer for TurboMCP v2.x -> v3.x migration"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
keywords = ["mcp", "compatibility", "migration"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# Core dependencies for type re-exports
turbomcp-core = { version = "3.0.0-alpha.1", path = "../turbomcp-core" }

# Serde for type compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Enable server compatibility types (Claims, AuthConfig, etc.)
server = []
# Enable all compatibility features
full = ["server"]

[dev-dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
