[package]
name = "turbomcp-core"
version = "3.0.0-beta.5"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Core MCP types and primitives - no_std compatible for WASM targets"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "protocol", "types", "no_std", "wasm"]
categories = ["no-std", "encoding", "parser-implementations"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
# Types (single source of truth)
turbomcp-types = { workspace = true }

# Serialization (no_std compatible with alloc)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# no_std compatible HashMap
hashbrown = { version = "0.15", features = ["serde"] }

# Compact strings (no_std compatible)
compact_str = { version = "0.9", default-features = false, features = ["serde"] }

# Small vectors (no_std compatible)
smallvec = { version = "1.11", default-features = false, features = ["serde"] }

# Zero-copy serialization (optional)
rkyv = { version = ">=0.8.13", default-features = false, optional = true, features = [
    "alloc",
    "bytecheck",
    "hashbrown-0_15",
    "smallvec-1",
] }
rancor = { version = "0.1", default-features = false, optional = true, features = ["alloc"] }

# Optional std features (for rich-errors)
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"], optional = true }
uuid = { version = "1.6", default-features = false, features = ["serde", "v4", "std"], optional = true }

# Base64 for Basic auth parsing (optional, std only)
base64 = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
criterion = { workspace = true, features = ["html_reports"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "rkyv_zero_copy_benchmark"
harness = false
required-features = ["zero-copy"]

[features]
default = ["std"]
std = ["serde/std", "serde_json/std", "rkyv?/std", "base64"]
# Enable rich error context with UUID tracking and timestamps
rich-errors = ["std", "uuid", "chrono"]
# WASM-specific optimizations
wasm = []
# Zero-copy serialization with rkyv
zero-copy = ["rkyv", "rancor"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
