[package]
name = "turbomcp-dpop"

version = "2.3.7"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "DPoP (RFC 9449) implementation for TurboMCP with HSM support"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-dpop"
readme = "README.md"
keywords = ["dpop", "oauth", "security", "hsm", "rfc9449"]
categories = ["authentication", "cryptography", "web-programming"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0.16"
tracing = "0.1"

# Cryptographic dependencies - core DPoP functionality
jsonwebtoken = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
ring = "0.17"
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8.5"
signature = "2.2"
hex = "0.4"
zeroize = "1.7"
subtle = "2.6"

# HTTP types for DPoP proof generation
http = "1.0"
url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for nonce generation
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }

# Builder pattern for ergonomic API
bon = "3.6"

# Redis storage (optional)
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "safe_iterators"], optional = true }

# HSM support - PKCS#11 (optional)
cryptoki = { version = "0.10", optional = true }
r2d2 = { version = "0.8", optional = true }
secrecy = { version = "0.8.0", optional = true }
parking_lot = { workspace = true, optional = true }
asn1 = { version = "0.22.0", optional = true }

# HSM support - YubiHSM (optional)
yubihsm = { version = "0.42", optional = true, features = ["usb", "http"] }

# Internal dependencies

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
proptest = "1.5"

[features]
default = []

# Storage backends
redis-storage = ["dep:redis"]

# HSM backends
hsm-pkcs11 = ["dep:cryptoki", "dep:r2d2", "dep:secrecy", "dep:parking_lot", "dep:asn1"]
hsm-yubico = ["dep:yubihsm", "dep:secrecy", "dep:parking_lot"]
hsm = ["hsm-pkcs11", "hsm-yubico"]

# Test utilities
test-utils = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
