[package]
name = "turbomcp-macros"
version = "2.0.0"
edition = "2024"
description = "Procedural macros for ergonomic MCP tool and resource registration"
license = "MIT"
authors = ["Nicholas Paterno <nick@epistates.com>"]
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "macros", "procedural", "derive", "codegen"]
categories = ["development-tools"]
readme = "README.md"
rust-version = "1.89.0"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# JSON Schema generation
schemars = { version = "0.8", optional = true }

# CRITICAL FIX: Add dependencies for macro-generated code
# These are required because the #[server] macro generates code that uses these crates
axum = { version = "0.8.4", optional = true, features = ["ws", "tracing", "macros"] }
tokio = { workspace = true, optional = true }
turbomcp-protocol = { version = "2.0.0", path = "../turbomcp-protocol" }
turbomcp-transport = { version = "2.0.0", path = "../turbomcp-transport", optional = true }

[dev-dependencies]
tokio = { workspace = true }
turbomcp-protocol = { version = "2.0.0", path = "../turbomcp-protocol" }
turbomcp-core = { version = "2.0.0", path = "../turbomcp-core", default-features = false, features = ["std"] }
async-trait = "0.1"

[features]
default = ["schema"]
schema = ["schemars"]
# CRITICAL FIX: Feature flags for macro-generated code
http = ["axum"]
tcp = ["tokio", "turbomcp-transport"]
unix = ["tokio", "turbomcp-transport"]